@@ -7,6 +7,10 @@
 		<artifactId>exec</artifactId>
 		<version>1.4.4-SNAPSHOT</version>
 	</parent>
+	<properties>
+        <userType>developer_release</userType>
+        <vm.args>-Xmx1G -XX:MaxPermSize=256M</vm.args>
+    </properties>
 	<artifactId>flexomaintainer</artifactId>
 	<dependencies>
 		<dependency>
